@@ -17,6 +17,7 @@ For users:
 - New: task #11261 : Add an entry into menu called "New shipment".
 - New: Make option MAIN_GENERATE_DOCUMENTS_WITHOUT_VAT available by default.
 - New: Can build PDF in USLetter format or canada format.
+- New: Can export into Excel 2007 format.
 
 For developers:
 - Qual: Removed no more used external libraries.
